--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Pokedex with React !",
   "main": "server.js",
   "scripts": {
-    "dev": "webpack -d --watch",
     "build": "webpack -p",
-    "start": "node server.js"
+    "start": "node server.js",
+    "server": "node --harmony ./src/server"
   },
   "devDependencies": {
     "babel-loader": "6.2.4",
@@ -18,7 +18,13 @@
   },
   "dependencies": {
     "express": "4.14.0",
+    "express-graphql": "0.5.3",
+    "graphiql": "0.7.4",
+    "graphql": "0.6.2",
+    "immutable": "3.8.1",
     "react": "15.3.0",
-    "react-dom": "15.3.0"
+    "react-dom": "15.3.0",
+    "react-redux": "4.4.5",
+    "redux": "3.5.2"
   }
 }
