--- a/package.json
+++ b/package.json
@@ -6,17 +6,24 @@
   "scripts": {
     "build": "webpack -p",
     "start": "node server.js",
-    "server": "nodemon --harmony ./src/server"
+    "server": "nodemon --harmony ./src/server",
+    "lint": "eslint --cache --ext .js,.jsx ."
   },
   "devDependencies": {
+    "babel-eslint": "6.1.2",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.13.2",
     "babel-preset-react": "6.11.1",
-    "react-hot-loader": "1.3.0",
-    "webpack": "1.13.1",
-    "webpack-dev-server": "1.14.1"
+    "eslint": "3.3.1",
+    "eslint-config-airbnb": "10.0.1",
+    "eslint-plugin-import": "1.13.0",
+    "eslint-plugin-jsx-a11y": "2.1.0",
+    "eslint-plugin-react": "6.1.1",
+    "react-hot-loader": "1.3.0"
   },
   "dependencies": {
+    "webpack": "1.13.1",
+    "webpack-dev-server": "1.14.1",
     "apollo-client": "0.4.11",
     "babel-plugin-syntax-decorators": "6.13.0",
     "bluebird": "3.4.1",
