--- a/package.json
+++ b/package.json
@@ -7,25 +7,39 @@
     "build": "webpack -p",
     "start": "node server.js",
     "server": "nodemon --harmony ./src/server",
-    "lint": "eslint --cache --ext .js,.jsx ."
+    "lint": "eslint --cache --ext .js,.jsx .",
+    "test-client": "NODE_ENV=test karma start ./karma.conf.js"
   },
   "devDependencies": {
+    "app-root-path": "1.3.0",
     "babel-eslint": "6.1.2",
     "babel-loader": "6.2.4",
+    "babel-plugin-syntax-decorators": "6.13.0",
     "babel-preset-es2015": "6.13.2",
     "babel-preset-react": "6.11.1",
+    "babelify": "7.3.0",
+    "browserify": "13.1.0",
+    "chai": "3.5.0",
     "eslint": "3.3.1",
     "eslint-config-airbnb": "10.0.1",
     "eslint-plugin-import": "1.13.0",
     "eslint-plugin-jsx-a11y": "2.1.0",
     "eslint-plugin-react": "6.1.1",
-    "react-hot-loader": "1.3.0"
+    "karma": "1.2.0",
+    "karma-browserify": "5.1.0",
+    "karma-chai": "0.1.0",
+    "karma-chrome-launcher": "1.0.1",
+    "karma-mocha": "1.1.1",
+    "karma-nyan-reporter": "0.2.4",
+    "karma-phantomjs-launcher": "1.0.1",
+    "karma-spec-reporter": "0.0.26",
+    "react-hot-loader": "1.3.0",
+    "watchify": "3.7.0",
+    "webpack": "1.13.1",
+    "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
-    "webpack": "1.13.1",
-    "webpack-dev-server": "1.14.1",
     "apollo-client": "0.4.11",
-    "babel-plugin-syntax-decorators": "6.13.0",
     "bluebird": "3.4.1",
     "express": "4.14.0",
     "express-graphql": "0.5.3",
@@ -38,8 +52,6 @@
     "react-dom": "15.3.0",
     "react-redux": "4.4.5",
     "redis": "2.6.2",
-    "redux": "3.5.2",
-    "request": "2.74.0",
     "request-promise": "4.1.0",
     "superagent": "2.1.0"
   }
