--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "key-spacing": ["error", { "beforeColon": true }],
     "indent": ["error", 2],
     "arrow-body-style": 0,
-    "import/no-extraneous-dependencies" : 0
+    "import/no-extraneous-dependencies": 0,
+    "react/require-extension": 0
   }
 }
