--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babelify": "7.3.0",
     "browserify": "13.1.0",
     "chai": "3.5.0",
+    "enzyme": "2.4.1",
     "eslint": "3.3.1",
     "eslint-config-airbnb": "10.0.1",
     "eslint-plugin-import": "1.13.0",
@@ -29,10 +30,14 @@
     "karma-browserify": "5.1.0",
     "karma-chai": "0.1.0",
     "karma-chrome-launcher": "1.0.1",
+    "karma-cli": "1.0.1",
     "karma-mocha": "1.1.1",
     "karma-nyan-reporter": "0.2.4",
     "karma-phantomjs-launcher": "1.0.1",
+    "karma-phantomjs-shim": "1.4.0",
     "karma-spec-reporter": "0.0.26",
+    "react-addons-test-utils": "15.3.0",
+    "react-dom": "15.3.0",
     "react-hot-loader": "1.3.0",
     "watchify": "3.7.0",
     "webpack": "1.13.1",
