--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "enzyme": "2.4.1",
     "eslint": "3.3.1",
     "eslint-config-airbnb": "10.0.1",
+    "eslint-config-airbnb-base": "5.0.2",
     "eslint-plugin-import": "1.13.0",
     "eslint-plugin-jsx-a11y": "2.1.0",
     "eslint-plugin-react": "6.1.1",
@@ -36,6 +37,7 @@
     "karma-phantomjs-launcher": "1.0.1",
     "karma-phantomjs-shim": "1.4.0",
     "karma-spec-reporter": "0.0.26",
+    "mocha": "3.0.2",
     "react-addons-test-utils": "15.3.0",
     "react-dom": "15.3.0",
     "react-hot-loader": "1.3.0",
@@ -44,18 +46,14 @@
     "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
-    "apollo-client": "0.4.11",
     "bluebird": "3.4.1",
     "express": "4.14.0",
     "express-graphql": "0.5.3",
-    "graphiql": "0.7.4",
     "graphql": "0.6.2",
-    "immutable": "3.8.1",
     "lodash.get": "4.4.1",
     "radium": "0.18.1",
     "react": "15.3.0",
     "react-dom": "15.3.0",
-    "react-redux": "4.4.5",
     "redis": "2.6.2",
     "request-promise": "4.1.0",
     "superagent": "2.1.0"
