--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node server.js",
     "server": "nodemon --harmony ./src/server",
     "lint": "eslint --cache --ext .js,.jsx .",
-    "test-client": "NODE_ENV=test karma start ./karma.conf.js"
+    "test-client": "NODE_ENV=test karma start ./karma.conf.js",
+    "test" : "npm run test-client",
+    "posttest" : "npm run lint"
   },
   "devDependencies": {
     "app-root-path": "1.3.0",
