--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "indent": ["error", 2],
     "arrow-body-style": 0,
     "import/no-extraneous-dependencies": 0,
-    "react/require-extension": 0
+    "react/require-extension": 0,
+    "no-unused-expressions" : 0
   }
 }
