--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "server.js",
   "scripts": {
     "build": "webpack -p",
-    "start": "node server.js",
+    "client": "node server.js",
     "server": "nodemon --harmony ./src/server",
     "lint": "eslint --cache --ext .js,.jsx .",
-    "test-client": "NODE_ENV=test karma start ./karma.conf.js",
-    "test" : "npm run test-client",
-    "posttest" : "npm run lint"
+    "test-client": "NODE_ENV=test karma start ./karma.conf.js --singleRun false",
+    "test": "npm run test-client",
+    "posttest": "npm run lint"
   },
   "devDependencies": {
     "app-root-path": "1.3.0",
@@ -43,6 +43,8 @@
     "react-addons-test-utils": "15.3.0",
     "react-dom": "15.3.0",
     "react-hot-loader": "1.3.0",
+    "sinon": "1.17.5",
+    "sinon-chai": "2.8.0",
     "watchify": "3.7.0",
     "webpack": "1.13.1",
     "webpack-dev-server": "1.14.1"
