--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "client": "node server.js",
     "server": "nodemon --harmony ./src/server",
     "lint": "eslint --cache --ext .js,.jsx .",
-    "test-client": "NODE_ENV=test karma start ./karma.conf.js --singleRun false",
-    "test": "npm run test-client",
+    "test-client": "NODE_ENV=test karma start ./karma.conf.js --singleRun true --autoWatch false --reporters spec",
+    "test-client-watch": "NODE_ENV=test karma start ./karma.conf.js --singleRun false --autoWatch true --reporters spec",
+    "test-server": "mocha --opts ./mocha.opts 'src/**/*.serverSpec.js'",
+    "test-server-watch": "mocha --watch --opts ./mocha.opts 'src/**/*.serverSpec.js'",
+    "test": "npm run test-client && npm run test-server",
     "posttest": "npm run lint"
   },
   "devDependencies": {
@@ -19,6 +22,7 @@
     "babel-plugin-syntax-decorators": "6.13.0",
     "babel-preset-es2015": "6.13.2",
     "babel-preset-react": "6.11.1",
+    "babel-register": "6.14.0",
     "babelify": "7.3.0",
     "browserify": "13.1.0",
     "chai": "3.5.0",
