--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "poke-react",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Pokedex with React !",
   "main": "server.js",
   "scripts": {
-    "build": "webpack -p",
-    "client": "node server.js",
+    "build": "webpack --config webpack.prod.config.js -p",
+    "start": "npm-run-all --parallel build redis server",
+    "watch" : "npm-run-all --parallel redis server client",
+    "client": "node webpackServer.js",
     "server": "nodemon --harmony ./src/server",
+    "redis" : "redis-server",
     "lint": "eslint --cache --ext .js,.jsx .",
     "test-client": "NODE_ENV=test karma start ./karma.conf.js --singleRun true --autoWatch false --reporters spec",
     "test-client-watch": "NODE_ENV=test karma start ./karma.conf.js --singleRun false --autoWatch true --reporters spec",
@@ -14,6 +17,11 @@
     "test-server-watch": "mocha --watch --opts ./mocha.opts 'src/**/*.serverSpec.js'",
     "test": "npm run test-client && npm run test-server",
     "posttest": "npm run lint"
+  },
+  "engineStrict": true,
+  "engines": {
+    "node": "6.3.1",
+    "npm": "3.10.3"
   },
   "devDependencies": {
     "app-root-path": "1.3.0",
@@ -59,6 +67,7 @@
     "express-graphql": "0.5.3",
     "graphql": "0.6.2",
     "lodash.get": "4.4.1",
+    "npm-run-all": "3.1.0",
     "radium": "0.18.1",
     "react": "15.3.0",
     "react-dom": "15.3.0",
