--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
     "arrow-body-style": 0,
     "import/no-extraneous-dependencies": 0,
     "react/require-extension": 0,
-    "no-unused-expressions" : 0
+    "no-unused-expressions" : 0,
+    "consistent-return" : 0,
   }
 }
