--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "build": "webpack --config webpack.prod.config.js -p",
-    "start": "npm-run-all --parallel build server",
+    "start": "npm-run-all --parallel build redis server",
     "watch" : "npm-run-all --parallel redis server client",
     "client": "node webpackServer.js",
     "server": "nodemon --harmony ./src/server",
