--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "build": "webpack --config webpack.prod.config.js -p",
     "start": "npm-run-all --parallel build redis server",
-    "watch" : "npm-run-all --parallel redis server client",
+    "watch": "npm-run-all --parallel redis server client",
     "client": "node webpackServer.js",
     "server": "nodemon --harmony ./src/server",
-    "redis" : "redis-server",
+    "redis": "redis-server",
     "lint": "eslint --cache --ext .js,.jsx .",
     "test-client": "NODE_ENV=test karma start ./karma.conf.js --singleRun true --autoWatch false --reporters spec",
     "test-client-watch": "NODE_ENV=test karma start ./karma.conf.js --singleRun false --autoWatch true --reporters spec",
@@ -24,9 +24,6 @@
     "npm": "3.10.3"
   },
   "devDependencies": {
-
-  },
-  "dependencies": {
     "app-root-path": "1.3.0",
     "babel-eslint": "6.1.2",
     "babel-loader": "6.2.4",
@@ -62,7 +59,9 @@
     "sinon-chai": "2.8.0",
     "watchify": "3.7.0",
     "webpack": "1.13.1",
-    "webpack-dev-server": "1.14.1",
+    "webpack-dev-server": "1.14.1"
+  },
+  "dependencies": {
     "bluebird": "3.4.1",
     "express": "4.14.0",
     "express-graphql": "0.5.3",
@@ -74,6 +73,7 @@
     "react-dom": "15.3.0",
     "redis": "2.6.2",
     "request-promise": "4.1.0",
-    "superagent": "2.1.0"
+    "superagent": "2.1.0",
+    "urijs": "1.18.2"
   }
 }
