--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "scripts": {
     "build": "webpack --config webpack.prod.config.js -p",
     "start": "npm-run-all --parallel build redis server",
-    "watch": "npm-run-all --parallel redis server client",
-    "client": "node webpackServer.js",
-    "server": "nodemon --harmony ./src/server",
+    "watch": "npm-run-all --parallel redis server dev",
+    "dev": "node webpackServer.js",
+    "server": "nodemon --harmony server/index.js",
     "redis": "redis-server",
     "lint": "eslint --cache --ext .js,.jsx .",
     "test-client": "NODE_ENV=test karma start ./karma.conf.js --singleRun true --autoWatch false --reporters spec",
     "test-client-watch": "NODE_ENV=test karma start ./karma.conf.js --singleRun false --autoWatch true --reporters spec",
-    "test-server": "mocha --opts ./mocha.opts 'src/**/*.serverSpec.js'",
-    "test-server-watch": "mocha --watch --opts ./mocha.opts 'src/**/*.serverSpec.js'",
+    "test-server": "mocha --opts ./mocha.opts 'server/**/*.serverSpec.js'",
+    "test-server-watch": "mocha --watch --opts ./mocha.opts 'server/**/*.serverSpec.js'",
     "test": "npm run test-client && npm run test-server",
     "posttest": "npm run lint"
   },
