--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npm-run-all --parallel build redis server",
     "watch": "npm-run-all --parallel redis server dev",
     "dev": "node webpackServer.js",
-    "server": "nodemon --harmony server/index.js",
+    "server": "node --harmony server/index.js",
     "redis": "redis-server",
     "lint": "eslint --cache --ext .js,.jsx .",
     "test-client": "NODE_ENV=test karma start ./karma.conf.js --singleRun true --autoWatch false --reporters spec",
