--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "build": "webpack --config webpack.prod.config.js -p",
-    "start": "npm-run-all --parallel build redis server",
+    "start": "npm-run-all --parallel build server",
     "watch": "npm-run-all --parallel redis server dev",
     "dev": "node webpackServer.js",
     "server": "node --harmony server/index.js",
