--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "Pokedex with React !",
   "main": "server.js",
   "scripts": {
-    "build": "webpack --config webpack.prod.config.js -p",
-    "start": "npm-run-all --parallel build server",
     "watch": "npm-run-all --parallel redis server dev",
-    "dev": "node webpackServer.js",
-    "server": "node --harmony server/index.js",
+    "server": "nodemon --watch server --harmony server/index.js",
+    "dev": "node node_modules/webpack/bin/webpack.js --watch",
     "redis": "redis-server",
     "lint": "eslint --cache --ext .js,.jsx .",
     "test-client": "NODE_ENV=test karma start ./karma.conf.js --singleRun true --autoWatch false --reporters spec",
@@ -34,6 +32,7 @@
     "babelify": "7.3.0",
     "browserify": "13.1.0",
     "chai": "3.5.0",
+    "clean-webpack-plugin": "0.1.14",
     "enzyme": "2.4.1",
     "eslint": "3.3.1",
     "eslint-config-airbnb": "10.0.1",
