--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Pokedex with React !",
   "main": "server.js",
   "scripts": {
+    "build": "webpack --config webpack.config.js -p",
+    "start": "npm-run-all --parallel build redis server",
     "watch": "npm-run-all --parallel redis server dev",
     "server": "nodemon --watch server --harmony server/index.js",
     "dev": "node node_modules/webpack/bin/webpack.js --watch",
