--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "node": "6.3.1",
     "npm": "3.10.3"
   },
-  "devDependencies": {
+  "dependencies": {
     "app-root-path": "1.3.0",
     "babel-eslint": "6.1.2",
     "babel-loader": "6.2.4",
@@ -60,9 +60,7 @@
     "sinon-chai": "2.8.0",
     "watchify": "3.7.0",
     "webpack": "1.13.1",
-    "webpack-dev-server": "1.14.1"
-  },
-  "dependencies": {
+    "webpack-dev-server": "1.14.1",
     "bluebird": "3.4.1",
     "express": "4.14.0",
     "express-graphql": "0.5.3",
