--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Pokedex with React !",
   "main": "server.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js -p",
-    "start": "(npm run redis &); npm run build && npm run server",
+    "build": "NODE_ENV=production webpack --config webpack.config.js -p",
+    "start": "node --harmony server/index.js",
     "watch": "npm-run-all --parallel redis server dev",
     "server": "nodemon --watch server --harmony server/index.js",
     "dev": "node node_modules/webpack/bin/webpack.js --watch",
@@ -32,9 +32,12 @@
     "babel-preset-react": "6.11.1",
     "babel-register": "6.14.0",
     "babelify": "7.3.0",
+    "bluebird": "3.4.1",
     "browserify": "13.1.0",
     "chai": "3.5.0",
     "clean-webpack-plugin": "0.1.14",
+    "config": "1.24.0",
+    "copy-webpack-plugin": "4.0.1",
     "enzyme": "2.4.1",
     "eslint": "3.3.1",
     "eslint-config-airbnb": "10.0.1",
@@ -42,6 +45,9 @@
     "eslint-plugin-import": "1.13.0",
     "eslint-plugin-jsx-a11y": "2.1.0",
     "eslint-plugin-react": "6.1.1",
+    "express": "4.14.0",
+    "express-graphql": "0.5.3",
+    "graphql": "0.6.2",
     "karma": "1.2.0",
     "karma-browserify": "5.1.0",
     "karma-chai": "0.1.0",
@@ -52,27 +58,22 @@
     "karma-phantomjs-launcher": "1.0.1",
     "karma-phantomjs-shim": "1.4.0",
     "karma-spec-reporter": "0.0.26",
-    "mocha": "3.0.2",
-    "react-addons-test-utils": "15.3.0",
-    "react-dom": "15.3.0",
-    "react-hot-loader": "1.3.0",
-    "sinon": "1.17.5",
-    "sinon-chai": "2.8.0",
-    "watchify": "3.7.0",
-    "webpack": "1.13.1",
-    "webpack-dev-server": "1.14.1",
-    "bluebird": "3.4.1",
-    "express": "4.14.0",
-    "express-graphql": "0.5.3",
-    "graphql": "0.6.2",
     "lodash.get": "4.4.1",
+    "mocha": "3.0.2",
     "npm-run-all": "3.1.0",
     "radium": "0.18.1",
     "react": "15.3.0",
+    "react-addons-test-utils": "15.3.0",
+    "react-dom": "15.3.0",
+    "react-hot-loader": "1.3.0",
     "redis": "2.6.2",
     "request-promise": "4.1.0",
+    "sinon": "1.17.5",
+    "sinon-chai": "2.8.0",
     "superagent": "2.1.0",
     "urijs": "1.18.2",
-    "copy-webpack-plugin": "4.0.1"
+    "watchify": "3.7.0",
+    "webpack": "1.13.1",
+    "webpack-dev-server": "1.14.1"
   }
 }
