--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "Pokedex with React !",
   "main": "server.js",
   "scripts": {
-    "build": "NODE_ENV=production webpack --config webpack.config.js -p",
-    "start": "node --harmony index.js",
-    "watch": "npm-run-all --parallel redis server dev",
-    "server": "nodemon --watch server --harmony server/index.js",
-    "dev": "node node_modules/webpack/bin/webpack.js --watch",
-    "redis": "redis-server",
+    "build": "NODE_ENV=production webpack --config webpack.config-prod.js -p",
+    "start": "node index.js",
+    "watch": "concurrently --kill-others \"npm run client\" \"npm run server\"",
+    "server": "node node_modules/nodemon/bin/nodemon.js index.js",
+    "client": "node node_modules/webpack/bin/webpack.js --watch",
     "lint": "eslint --cache --ext .js,.jsx .",
     "test-client": "NODE_ENV=test karma start ./karma.conf.js --singleRun true --autoWatch false --reporters spec",
     "test-client-watch": "NODE_ENV=test karma start ./karma.conf.js --singleRun false --autoWatch true --reporters spec",
@@ -24,7 +23,21 @@
     "npm": "3.10.3"
   },
   "dependencies": {
-    "app-root-path": "1.3.0",
+    "bluebird": "3.4.1",
+    "config": "1.24.0",
+    "express": "4.14.0",
+    "express-graphql": "0.5.3",
+    "graphql": "0.6.2",
+    "lodash.get": "4.4.1",
+    "radium": "0.18.1",
+    "react": "15.3.0",
+    "react-dom": "15.3.0",
+    "redis": "2.6.2",
+    "request-promise": "4.1.0",
+    "superagent": "2.1.0",
+    "urijs": "1.18.2"
+  },
+  "devDependencies": {
     "babel-eslint": "6.1.2",
     "babel-loader": "6.2.4",
     "babel-plugin-syntax-decorators": "6.13.0",
@@ -32,11 +45,10 @@
     "babel-preset-react": "6.11.1",
     "babel-register": "6.14.0",
     "babelify": "7.3.0",
-    "bluebird": "3.4.1",
     "browserify": "13.1.0",
     "chai": "3.5.0",
     "clean-webpack-plugin": "0.1.14",
-    "config": "1.24.0",
+    "concurrently": "3.1.0",
     "copy-webpack-plugin": "4.0.1",
     "enzyme": "2.4.1",
     "eslint": "3.3.1",
@@ -45,9 +57,6 @@
     "eslint-plugin-import": "1.13.0",
     "eslint-plugin-jsx-a11y": "2.1.0",
     "eslint-plugin-react": "6.1.1",
-    "express": "4.14.0",
-    "express-graphql": "0.5.3",
-    "graphql": "0.6.2",
     "karma": "1.2.0",
     "karma-browserify": "5.1.0",
     "karma-chai": "0.1.0",
@@ -58,22 +67,13 @@
     "karma-phantomjs-launcher": "1.0.1",
     "karma-phantomjs-shim": "1.4.0",
     "karma-spec-reporter": "0.0.26",
-    "lodash.get": "4.4.1",
     "mocha": "3.0.2",
-    "npm-run-all": "3.1.0",
-    "radium": "0.18.1",
-    "react": "15.3.0",
+    "nodemon": "1.11.0",
     "react-addons-test-utils": "15.3.0",
-    "react-dom": "15.3.0",
     "react-hot-loader": "1.3.0",
-    "redis": "2.6.2",
-    "request-promise": "4.1.0",
     "sinon": "1.17.5",
     "sinon-chai": "2.8.0",
-    "superagent": "2.1.0",
-    "urijs": "1.18.2",
     "watchify": "3.7.0",
-    "webpack": "1.13.1",
-    "webpack-dev-server": "1.14.1"
+    "webpack": "1.13.1"
   }
 }
