Dont override node_modules when mount /:/app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
   app:
     build: .
     volumes:
-    - "./:/app"
+    - './:/app'
+    - '/app/node_modules'
     expose:
       - '3000'
     ports:
