--- a/.eslintrc
+++ b/.eslintrc
@@ -17,5 +17,6 @@
     "react/require-extension": 0,
     "no-unused-expressions" : 0,
     "consistent-return" : 0,
+    "import/prefer-default-export" : 0
   }
 }
