--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint --cache --ext .js,.jsx .",
     "test-client": "NODE_ENV=test karma start ./karma.conf.js --singleRun true --autoWatch false --reporters spec",
     "test-client-watch": "NODE_ENV=test karma start ./karma.conf.js --singleRun false --autoWatch true --reporters spec",
-    "test-server": "mocha --opts ./mocha.opts 'server/**/*.serverSpec.js'",
+    "test-server": "mocha --opts ./mocha.opts server/**/*.serverSpec.js",
     "test-server-watch": "mocha --watch --opts ./mocha.opts 'server/**/*.serverSpec.js'",
     "test-integration": "mocha --timeout 5000 'server/**/*.integrationSpec.js'",
     "test": "npm run test-client && npm run test-server && npm run test-integration",
@@ -29,6 +29,7 @@
     "express": "4.14.0",
     "express-graphql": "0.5.3",
     "graphql": "0.6.2",
+    "html-webpack-plugin": "2.28.0",
     "lodash.get": "4.4.1",
     "radium": "0.18.1",
     "react": "15.3.0",
@@ -36,7 +37,8 @@
     "redis": "2.6.2",
     "request-promise": "4.1.0",
     "superagent": "2.1.0",
-    "urijs": "1.18.2"
+    "urijs": "1.18.2",
+    "webpack": "2.2.1"
   },
   "devDependencies": {
     "babel-eslint": "6.1.2",
@@ -74,7 +76,6 @@
     "react-hot-loader": "1.3.0",
     "sinon": "1.17.5",
     "sinon-chai": "2.8.0",
-    "watchify": "3.7.0",
-    "webpack": "1.13.1"
+    "watchify": "3.7.0"
   }
 }
