--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Pokedex with React !",
   "main": "server.js",
   "scripts": {
-    "build": "NODE_ENV=production webpack --config webpack.config-prod.js -p",
+    "build": "NODE_ENV=production webpack --config webpack.config.prod.js -p",
     "start": "node index.js",
     "watch": "concurrently --kill-others \"npm run client\" \"npm run server\"",
     "server": "nodemon index.js",
