--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "15.3.0",
     "react-dom": "15.3.0",
     "redis": "2.6.2",
+    "request": "2.81.0",
     "request-promise": "4.1.0",
     "superagent": "2.1.0",
     "urijs": "1.18.2",
